in App.css, changed the QuickViewCompilation carousel's prev and next button so it has a transparent black background and moves left/right when hovered over;; in PostActionLikePopup:: changed appearance to have border and border-radius, a bit more padding, and flips to bottom/top when parts of it is not visible;; in PostFooter: pass recipeIndex to PostStats;; in PostStats: add new param recipeIndex used extract correct value of liked boolean; wip display user list that liked, hearted, etc when like-emojis, comments, shares is hovered over; added a bit of left padding on the stats emojis so it hides behind the LikePopup emojis;; in QuickViewCompilation: add quick-view-compilation to className so we can target it;; in RecipeImage: changed maxHeight to 60vh so it's a bit bigger;;

--- a/src/App.css
+++ b/src/App.css
@@ -119,19 +119,26 @@ span.my-btn-close-wrapper:hover svg.my-btn-close {
 
 div.postfullscreen-viewer > div.carousel > .carousel-control-next, div.postfullscreen-viewer > div.carousel > .carousel-control-prev {
   width: 8%;
+}
+div.postfullscreen-viewer > div.carousel > .carousel-control-next, div.postfullscreen-viewer > div.carousel > .carousel-control-prev,
+div.quick-view-compilation > div.carousel > a.carousel-control-next, div.quick-view-compilation > div.carousel > a.carousel-control-prev {
   background: #0000004b;
   transition: all 0.2s ease-out;
 }
-div.postfullscreen-viewer > div.carousel > .carousel-control-next:hover, div.postfullscreen-viewer > div.carousel > .carousel-control-prev:hover {
+div.postfullscreen-viewer > div.carousel > .carousel-control-next:hover, div.postfullscreen-viewer > div.carousel > .carousel-control-prev:hover,
+div.quick-view-compilation > div.carousel > a.carousel-control-next:hover, div.quick-view-compilation > div.carousel > a.carousel-control-prev:hover {
   background: #00000041;
   transition: all 0.2s ease-out;
 }
-div.postfullscreen-viewer > div.carousel > .carousel-control-next:hover {
+div.postfullscreen-viewer > div.carousel > .carousel-control-next:hover, 
+div.quick-view-compilation > div.carousel > a.carousel-control-next:hover {
   translate: 5%;
 }
-div.postfullscreen-viewer > div.carousel > .carousel-control-prev:hover {
+div.postfullscreen-viewer > div.carousel > .carousel-control-prev:hover, 
+div.quick-view-compilation > div.carousel > a.carousel-control-prev:hover {
   translate: -5%;
 }
+
 div.mid-content {
   max-width: 700px;
   margin: 0 auto;
